<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizzActivity">

    <LinearLayout
        android:id="@+id/layoutQuizz"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtQuestionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00B8D4"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/txt_question_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtQuestionDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00B8D4"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/txt_question_description" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:id="@+id/txtAnswerOne"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="#AEEA00"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/answer_one" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/txtAnswerTwo"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="#AEEA00"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/answer_two" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/txtAnswerThree"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="#AEEA00"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/answer_three" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:id="@+id/txtAnswerFour"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="#AEEA00"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/answer_four" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>